2013-06-28  Per Bothner  <per@bothner.com>

	* ClassExp.java (compileSetField): If immediate, don't create Literal
	here for compound class.  Hence, we don't have to clear FINAL flag.
	Which avoids confusing/complicating import in ModuleExp#evelModule2.
	* ClassInitializer.java (emit): In the immediate case changed above,
	use Compilation#compileConstant.  This does create a Literal,
	but uses a fresh field, which is the copied into the ClassType field.

	* ClassExp.java (compilePushClass): Cleanup so
	Target#compileFromStack is called in all cases.

2013-06-22  Per Bothner  <per@bothner.com>

	* QuoteExp.java (trueExp, falseExp): Change type to Type.booleanType.
	(trueObjExp, falseObjExp): New constants, whose type are
	java.lang.Boolean.
	(getInstance): Update accordingly.

2013-06-11  Per Bothner  <per@bothner.com>

	* AccessExp.java (getSimpleName): Handle unknown-namespace symbols.

2013-06-02  Per Bothner  <per@bothner.com>

	* InlineCalls.java (checkType): Use new Type#isCompatibleWithValue.
	* Language.java (unionType): Some improvements.

	* LambdaExp.java (setCallersNeedStaticLink): Better check for "outer"
	lambda.  Fixed bug - see testsuite/inner-1.scm.

2013-05-25  Per Bothner  <per@bothner.com>

	* LambdaExp.java (enterFunction): Make sure key_i is incremented
	even if a keyword parameter is ignored.  Also handle the case of
	side effects in default expressions for ignored parameters.
	This fixes Savannah bug #39059 "Method keywords problem".

2013-05-11  Per Bothner  <per@bothner.com>

	* PrimProcedure.java (methodForInvoke): New field.  Use this Method
	for code-generation, whiling using 'method' field for type-checking.
	This fixes Savannah bug #38890 "Wrong more than one
	applicable method warning".
	(setMethodForInvoke, setOpcode): New methods.

	* PrimProcedure.java: Make various fields private.
	* LambdaExp.java (checkForInitCall): Use PrimProcedure#getMethod.

2013-05-06  Per Bothner  <per@bothner.com>
