@@ -1,3 +1,12 @@
+2013-06-29  Per Bothner  <per@bothner.com>
+
+	* LambdaExp.java (getCanCall): Remove - never actually used.
+	(setCanCall): Remove - pointless if getCanCall never used.
+	(CAN_CALL): Remove.
+	(setCanAccess): Remove - replace by ...
+	* InlineCalls.java (setCanAccess): new method.
+	* FindCapturedVars.java (capture): Remove setCanCall call.
+
 2013-06-28  Per Bothner  <per@bothner.com>
 
 	* ClassExp.java (compileSetField): If immediate, don't create Literal
